# Astinus

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  main.py  pm2-ts.config.js  pm2.config.js  pyproject.toml
.github/workflows/: ci.yml
config/: .gitignore  settings.example.yaml
data/packs/: demo_pack.json
docs/: API_TYPES.ts  ARCHITECTURE.md  ARCHITECTURE_V2_PROPOSAL.md  DEPLOYMENT.md  GUIDE.md  MIGRATION_PLAN_TS.md  PROGRESS.md  REFACTOR_MERGE_RULE_AGENT.md  REFACTOR_PLAN_2026_01.md  SETTINGS_SYSTEM_PLAN.md  TS_BACKEND_RETRIEVAL_PLAN.md  WEB_FRONTEND_PLAN.md  guide-agent.md  guide-npc.md
docs/Archived/: GUIDE.md  MIGRATION_COMPLETE.md  REFACTOR_FEASIBILITY.md  WEB_FRONTEND_PLAN.md
locale/cn/: common.json  system.json
locale/en/: common.json  system.json
scripts/: remove_thought_signature.py  test_hybrid_search.py  test_lore_agent.py  test_vector_search.py
src/backend/: .eslintrc.json  .gitignore  AGENTS.md  README.md  drizzle.config.ts  eslint.config.mjs  main.py  package-lock.json  package.json  tsconfig.json  vitest.config.ts
src/backend-ts/: README.md  package-lock.json  package.json  vitest.integration.config.ts
src/backend-ts/src/: index.ts  schemas.ts
src/backend-ts/src/api/: websocket.ts
src/backend-ts/src/db/: index.ts
src/backend-ts/src/lib/: embeddings.ts  lance.ts  llm-factory.ts  mock-llm.ts
src/backend-ts/src/services/: dice.ts  location-context.ts  lore.ts  world.ts
src/backend-ts/tests/: setup.ts
src/backend-ts/tests/api/: frontend-api-contract.test.ts
src/backend-ts/tests/mocks/: gm-agent.mock.ts
src/backend-ts/tests/services/: vector-search.test.ts
src/backend-ts/tests/utils/: test-app.ts
src/backend/agents/: AGENTS.md  __init__.py  base.py  director.py  gm.py  lore.py  npc.py  rule.py
src/backend/agents/prompts/: gm_agent.yaml  rule_agent.yaml
src/backend/api/: AGENTS.md  websockets.py
src/backend/api/v1/: game.py  settings.py
src/backend/core/: AGENTS.md  config.py  i18n.py  llm_provider.py  prompt_loader.py
src/backend/core/schemas/: __init__.py  world_pack.json
src/backend/models/: AGENTS.md  character.py  dice_check.py  game_state.py  i18n.py  narrative.py  persistence.py  trait.py  world_pack.py
src/backend/services/: AGENTS.md  database.py  dice.py  embedding.py  game_logger.py  location_context.py  lore.py  narrative.py  vector_store.py  world.py
src/backend/src/: index.ts  schemas.ts
src/backend/src/agents/: AGENTS.md
src/backend/src/api/: websocket.ts
src/backend/src/db/: index.ts  schema.ts
src/backend/src/lib/: embeddings.ts  lance.ts  (+1 more)
src/frontend/: __init__.py  app.py  client.py
src/frontend/screens/: __init__.py  character_creation.py  character_screen.py  game_screen.py  inventory_screen.py  menu_screen.py
src/frontend/widgets/: __init__.py  chat_box.py  dice_roller.py  stat_block.py
src/web/: AGENTS.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/web/src/: App.tsx  index.css  main.tsx  setupTests.ts
tests/: conftest.py
tests/api/: test_game_api.py  test_settings_api.py  test_websocket_integration.py  test_websocket_streaming.py
tests/backend/: test_coverage_boost.py  test_database.py  test_dice.py  test_lore_agent.py  test_narrative.py  test_narrative_manager.py  test_world_pack.py
tests/backend/agents/: test_base.py  test_director.py  test_gm.py  test_gm_roleplay_direction.py  test_integration_vector.py  test_lore.py  test_npc.py  test_npc_persistence.py  test_npc_roleplay_direction.py  test_rule.py  test_rule_result.py
tests/backend/core/: __init__.py  test_i18n.py  test_llm_provider.py  test_prompt_loader.py  test_schemas.py
tests/backend/models/: __init__.py  test_character.py  test_character_extended.py  test_dice_check.py  test_dice_check_extended.py  test_game_state.py  test_i18n.py  test_trait.py  test_world_pack_extended.py
tests/backend/services/: test_dice.py  test_dice_extended.py  test_location_context.py  test_lore_service.py  test_vector_store.py  test_world.py
tests/frontend/: test_app.py  test_client.py  test_client_connection.py
tests/frontend/screens/: test_character_creation.py  test_menu_screen.py
tests/frontend/widgets/: test_stat_block.py
tests/integration/: test_agent_coordination.py  test_agent_pipeline.py  test_api_e2e.py  test_frontend_api_contract.py  test_game_loop.py  test_services_integration.py
(+66 files in other folders)
